--- a/Laba9/Laba9.csproj
+++ b/Laba9/Laba9.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Laba9class\Myclass.csproj" />
+    <ProjectReference Include="..\MathLibrary\MathLibrary.csproj" />
   </ItemGroup>
 
 </Project>
